# momops

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-format.yml  ci.yml  publish.yml  security.yml
examples/: api_with_db.py  microservices.py  simple_blog.py
frontend/: index.html
momops/: __init__.py  budget.py  cli.py  config.py  deployment.py  exceptions.py  llm.py  models.py  mom.py  optimizer.py  recipes.py  safety.py  state.py  understanding.py
momops/providers/: aws.py  azure.py  gcp.py
momops/utils/: __init__.py  aws_errors.py  input_validation.py  logger.py  prompts.py  rate_limiter.py  validators.py
tests/: conftest.py  test_budget.py  test_cli.py  test_deployment.py  test_mom.py  test_optimizer.py  test_recipes.py  test_understanding.py
