[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "momops"
version = "0.1.0"
description = "Zero-config cloud infrastructure deployed with natural language"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["cloud", "infrastructure", "aws", "devops", "ai", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "anyio>=4.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "moto[ec2,rds,elbv2,route53,s3,iam,cloudwatch]>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "boto3-stubs[ec2,rds,elbv2,route53,s3,iam,cloudwatch]>=1.35.0",
]

[project.scripts]
momops = "momops.cli:app"

[project.urls]
Homepage = "https://momops.dev"
Documentation = "https://momops.dev/docs"
Repository = "https://github.com/momops/momops"
Issues = "https://github.com/momops/momops/issues"

[tool.hatch.build.targets.wheel]
packages = ["momops"]

# ── Ruff (linter + formatter) ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["momops"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"momops/config.py" = ["ANN401"]
"momops/providers/aws.py" = ["ANN401"]
"momops/utils/aws_errors.py" = ["ANN401"]
"momops/utils/rate_limiter.py" = ["ANN401"]
"momops/exceptions.py" = ["ANN401"]
"momops/understanding.py" = ["ANN401"]

# ── Mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

# ── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["momops"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
fail_under = 80
